# lux

./: .coverage  .cursorrules  .gitignore  .iex.exs  Cargo.toml  README.md  app.py  dev.envrc  dev.envrc.example  fix_numbers.py  mix.exs  pyproject.toml  test.envrc  twitter_api.py
lux/: mix.exs  (+1 more)
lux/native/lux_rust/: Cargo.toml
lux/native/lux_rust/.cargo/: config.toml
lux/native/lux_rust/src/: lib.rs
lux/priv/python/lux-sdk/: pyproject.toml
python-sdk/: .coverage  README.md  pyproject.toml
python-sdk/lux_sdk/: __init__.py  signals.py
python-sdk/lux_sdk/schemas/business/: __init__.py  business_model.py  customer_feedback.py  financial_report.py  market_analysis.py  performance_metric.py  project_proposal.py  resource_allocation.py  risk_assessment.py  stakeholder_impact.py  strategy_plan.py
python-sdk/lux_sdk/schemas/cognitive/: __init__.py  attention_focus.py  belief_update.py  cognitive_state.py  creativity_output.py  decision_matrix.py  hypothesis_formulation.py  inference_result.py  learning_process.py  learning_progress.py  memory_recall.py  metacognition_report.py  pattern_recognition.py  problem_decomposition.py  problem_solving.py  reasoning.py  reasoning_chain.py
python-sdk/lux_sdk/schemas/collaboration/: __init__.py  conflict_mediation.py  consensus_building.py  coordination_protocol.py  feedback_loop.py  resource_sharing.py  responsibility_matrix.py  role_assignment.py  team_dynamics.py  team_formation.py
python-sdk/lux_sdk/schemas/creative/: __init__.py  artistic_concept.py  artistic_feedback.py  character_development.py  color_palette.py  composition_layout.py  creative_concept.py  design_specification.py  musical_score.py  narrative_structure.py  scene_description.py  style_guide.py  visual_reference.py
python-sdk/lux_sdk/schemas/data/: __init__.py  data_collection.py  data_schema.py  data_transformation.py
python-sdk/lux_sdk/schemas/education/: __init__.py  assessment_criteria.py  competency_level.py  curriculum_design.py  feedback_report.py  learning_objective.py  learning_progress.py  learning_resource.py  progress_report.py  skill_evaluation.py
python-sdk/lux_sdk/schemas/emotional/: __init__.py  conflict_resolution.py  emotion_recognition.py  emotional_regulation.py  emotional_resonance.py  emotional_state.py  emotional_support.py  emotional_trigger.py  empathy_response.py  mood_regulation.py  relationship_dynamics.py  sentiment_analysis.py  social_awareness.py
python-sdk/lux_sdk/schemas/environmental/: __init__.py  environmental_impact.py  environmental_state.py  event_detection.py  object_recognition.py  sensor_data.py  spatial_relation.py
python-sdk/lux_sdk/schemas/ethical/: __init__.py  accountability_frame.py  bias_assessment.py  bias_detection.py  ethical_assessment.py  ethical_dilemma.py  ethical_justification.py  ethical_principle.py  fairness_metric.py  moral_judgment.py  privacy_impact.py  stakeholder_impact.py  transparency_report.py  value_alignment.py
python-sdk/lux_sdk/schemas/healthcare/: __init__.py  medical_diagnosis.py  medication_schedule.py  patient_history.py  patient_record.py  symptom_report.py  treatment_plan.py  vital_signs.py
python-sdk/lux_sdk/schemas/knowledge/: __init__.py  concept_definition.py  concept_map.py  domain_transfer.py  expertise_level.py  fact_assertion.py  information_request.py  knowledge_gap.py  knowledge_graph.py  knowledge_validation.py  ontology_mapping.py  source_citation.py
python-sdk/lux_sdk/schemas/language/: __init__.py  (+5 more)
python-sdk/tests/: conftest.py  requirements-test.txt  test_schema_imports.py  test_signals.py
(+336 files in other folders)
