[package]
name = "lux_rust"
version = "0.1.0"
authors = ["Lux Team"]
edition = "2024"

[lib]
name = "lux_rust"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.1"
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1.77"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 