[tool.poetry]
name = "lux-sdk"
version = "0.1.0"
description = "Python SDK for creating Lux-compatible agents"
authors = ["Lux Team"]
readme = "README.md"
packages = [{include = "lux_sdk"}]
license = "MIT"
repository = "https://github.com/SpectralFinance/lux"
documentation = "https://github.com/SpectralFinance/lux/tree/main/lux/guides"
keywords = ["lux", "agents", "ai", "sdk"]

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^4.17.3"
python-dateutil = "^2.8.2"
typing-extensions = "^4.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
mypy = "^1.0.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pylint.messages_control]
disable = ["C0111", "C0103", "R0903", "R0913"] 